<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarTareas">

    <TextView
        android:id="@+id/txt_agregar"
        style="@android:style/Widget.Holo.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/agregar"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_agregar" />

    <EditText
        android:id="@+id/et_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/poner_titulo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_desc" />

    <EditText
        android:id="@+id/et_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/poner_fecha"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="202dp"
        android:layout_height="105dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/poner_desc"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_desc" />

    <RadioGroup
        android:id="@+id/rg_importante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/et_desc"
        app:layout_constraintTop_toBottomOf="@+id/switch_importancia">

        <RadioButton
            android:id="@+id/rb_muy_importante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/muy_importante" />

        <RadioButton
            android:id="@+id/rb_importante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Importante" />

        <RadioButton
            android:id="@+id/rb_poco_importante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poco_importante" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch_importancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:text="@string/importancia"
        app:layout_constraintStart_toEndOf="@+id/txt_desc"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo"
        tools:checked="false" />

    <ImageButton
        android:id="@+id/im_importancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:src="@android:drawable/alert_light_frame"
        app:layout_constraintStart_toEndOf="@+id/txt_agregar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/terminar_tarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="16dp"
        android:src="@android:drawable/checkbox_on_background"
        app:layout_constraintStart_toEndOf="@+id/txt_agregar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_agregar_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="146dp"
        android:text="@string/agregar"
        app:layout_constraintStart_toEndOf="@+id/bt_editar"
        app:layout_constraintTop_toBottomOf="@+id/rg_importante" />

    <Button
        android:id="@+id/bt_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="45dp"
        android:text="@string/editar"
        app:layout_constraintStart_toEndOf="@+id/bt_eliminar_correo"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha" />

    <Button
        android:id="@+id/bt_eliminar_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="45dp"
        android:text="@string/eliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha" />

    <EditText
        android:id="@+id/etDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/bt_agregar_correo"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/bt_eliminar_correo"
        app:layout_constraintTop_toBottomOf="@+id/bt_editar" />

</androidx.constraintlayout.widget.ConstraintLayout>